fixed star position on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -289,6 +289,22 @@ a {
   }
 }
 
+.star-text-div-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 46%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 50;
+
+  @media screen and (width <=768px) {
+    left: 50%;
+    top: 66%;
+  }
+}
+
 .star-text {
   color: var(--text);
 }
